# python-demo

./: .gitignore  .pydevproject  README.md  pyproject.toml  requirements.txt
resources/: Renamed test.txt
src/demo/: DateAndTime.py  Email.py  Inheritance.py  JSON.py  Modules.py  Strings.py  Tuples.py
src/demo/v_2_7/: DOM.py  Dictionaries.py  Disassembler.py  Hi1.py  Hi2.py  Lists.py  SAX.py  Server.py  Thread.py  Threading.py  __init__.py
src/demo/v_3_10/: Classes.py  DOM.py  Dictionaries.py  Disassembler.py  Functions.py  Hello.py  JSON.py  Lists.py  Numbers.py  Regex.py  Strings.py  TkinterGUI.py  Tuples.py  animation.py  binary_operations.py  collections_demo.py  command_line.py  command_line_argparse.py  control_flow.py  date_and_time.py  demo_jupyter.ipynb  demo_matplotlib.py  disassembler.py  exceptions.py  functions.py  generators.py  hello.py  input_output.py  json_file_io.py  plot_gmm.py  polymorphism.py  pyplot_func_animation.py  pyplot_video_writer.py  singletons.py  time.py
src/demo/v_3_10/decorator/: component.py  main.py
src/demo/v_3_10/modules/: modules.py  support.py
src/demo/v_3_10/numpy_demo/: numpy_basic.py  testing.py
src/demo/v_3_10/object_oriented/: abstract_base_class.py  generics.py  inheritance.py  singleton.py
src/demo/v_3_10/pandas_demo/: pandas_basic.py
src/mypackage/: BinaryOperations.py  Classes.py  Client.py  ControlFlow.py  Exceptions.py  Functions.py  HelloSucka.py  IO.py  Modules.py  Numbers.py  Regex.py  Support.py  ThreadQueue.py  TkinterGUI.py
src/mypackage/subpackage/: __init__.py
(+11 files in other folders)
