[tool.poetry]
name = "python-demo"
version = "0.1.0"
description = ""
authors = ["Mark Frymire <mark.frymire@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
mpld3 = "^0.5.10"
imageio = "^2.33.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
