[tool.poetry]
name = "python-demo"
version = "0.1.0"
description = "Python demo"
authors = ["Mark Frymire <mark.frymire@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
imageio = "2.33.1"
jupyter = "1.0.0"
mpld3 = "0.5.10"
numpy = "2.3.2"
pandas = "2.3.2"
scipy = "1.16.1"
tzlocal = "5.2"

[tool.poetry.dev-dependencies]
pytest = "8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
